# ledgerai

./: .env.example  .gitignore  LICENSE  README.md  chainlit.md  ledgerai-implementation-plan.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
docs/: architecture.md  failure-catalog.md  guardrails.md  metrics-dictionary.md
docs/adrs/: 001-single-agent.md  002-no-framework.md
eval/: __init__.py  eval_suite.py
eval/results/: eval_results.json
public/: style.css
scripts/: backfill_q4.py  demo.py  download_filings.py  seed_data.py  showcase_demo.py
src/agent/: core.py  response.py  retrieval.py
src/context/: domain_rules.py  entity_context.py  metric_registry.py
src/guardrails/: confidence.py  provenance.py  scope_guard.py  validation.py
src/ingestion/: data_store.py  edgar_client.py  filing_parser.py
src/investigation/: __init__.py  decomposition.py  follow_ups.py  session.py
tests/: test_agent_integration.py  test_confidence.py  test_investigation.py  test_metric_registry.py  test_scope_guard.py  test_validation.py
ui/: app.py
